--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site of river college" />
+    <meta name="description" content="Образовательная организация" />
+    <meta name="keywords" content="Приемная кампания, Подача документов, Стань капитаном своей судьбы, Капитан, Судоходство, Образовательное учреждение, Уфимский филиал ВГУВТ"> 
     <link
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -14,7 +15,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap-utilities.min.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Уфимский филиал ВГУВТ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
