--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-RU">
   <head>
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Образовательная организация" />
-    <meta name="keywords" content="Приемная кампания, Подача документов, Стань капитаном своей судьбы, Капитан, Судоходство, Образовательное учреждение, Уфимский филиал ВГУВТ"> 
+    <meta
+      name="keywords"
+      content="Приемная кампания, Подача документов, Стань капитаном своей судьбы, Капитан, Судоходство, Образовательное учреждение, Уфимский филиал ВГУВТ"
+    />
     <link
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
       rel="stylesheet"
