feat(authirization) Реализована логика входа в лк

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap-utilities.min.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
+    <!--  <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
         m[i] =
           m[i] ||
@@ -58,7 +58,7 @@
           style="position: absolute; left: -9999px"
           alt=""
         /></div
-    ></noscript>
+    ></noscript> -->
     <!-- /Yandex.Metrika counter -->
     <title>Уфимский филиал ВГУВТ</title>
   </head>
