--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,7 @@
     <!-- /Yandex.Metrika counter -->
     <title>Уфимский филиал ВГУВТ</title>
   </head>
-  <body>
+  <body id="root">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
   </body>
 </html>
