--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,8 @@
     <!-- /Yandex.Metrika counter -->
     <title>Уфимский филиал ВГУВТ</title>
   </head>
-  <body id="root">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
